--- a/src/main/resources/templates/add-category.html
+++ b/src/main/resources/templates/add-category.html
@@ -15,8 +15,8 @@
           <div>
             <form method="post"  th:action="@{/categories}" th:object="${category}">
               <div class="mb-3">
-                <label for="nameField" class="form-label">Name</label>
-                <input type="text" class="form-control" id="nameField" placeholder="Enter Name Here" th:field="*{name}">
+                <label for="nameField" class="form-label">Category Name</label>
+                <input type="text" class="form-control" id="nameField" placeholder="Enter Category Here" th:field="*{name}">
               </div>
 
               <button class="btn btn-success" type="submit">Submit</button>
