--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
-  <a class="navbar-brand" href="#">Library Management System</a>
+  <a class="navbar-brand" th:href="@{/}">Library Management System</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,13 +30,19 @@
         <a class="nav-link" th:href="@{/addPublisher}">Add Publisher</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add Book</a>
+        <a class="nav-link" href="#" th:href="@{/addBook}">Add Book</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{/authors}">Authors</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{/categories}">Categories</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/publishers}">Publishers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" th:href="@{/books}">Books</a>
       </li>
     </ul>
   </div>
