--- a/src/main/resources/templates/publishers.html
+++ b/src/main/resources/templates/publishers.html
@@ -33,9 +33,9 @@
 
 
                     <td class="text-center">
-                        <a class="add"  th:href="@{/addPublisher}" title="Add" data-toggle="tooltip"><i class="fa-sharp fa-solid fa-plus mr-3"></i></a>
-                        <a class="edit" title="Edit" data-toggle="tooltip"><i class="fa-sharp fa-solid fa-pen mr-3"></i></a>
-                        <a class="delete" title="Delete" data-toggle="tooltip"><i class="fa-solid fa-trash"></i></a>
+                       <a class="add" title="Add" th:href="@{/addPublisher}" data-toggle="tooltip"><i class="fa-sharp fa-solid fa-plus mr-3"></i></a>
+                        <a class="edit" href="#" th:href="@{/updatePublisher/{id}(id=${publisher.id})}" title="Edit" data-toggle="tooltip"><i class="fa-sharp fa-solid fa-pen mr-3"></i></a>
+                        <a class="delete"  th:href="@{/deletePublisher/{id}(id=${publisher.id})}"title="Delete" data-toggle="tooltip"><i class="fa-solid fa-trash"></i></a>
                     </td>
                 </tr>
                     </span>
