--- a/src/main/resources/templates/update-author.html
+++ b/src/main/resources/templates/update-author.html
@@ -11,9 +11,9 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div>
-          <h1 class="text-center">Add an Author</h1>
+          <h1 class="text-center">Update Author</h1>
           <div>
-            <form method="post" th:action="@{/authors}" th:object="${author}">
+            <form method="post" th:href="@{/updateAuthor/{id}(id=${author.id})}" th:object="${author}">
               <div class="mb-3">
                 <label for="nameField" class="form-label">Name</label>
                 <input type="text" class="form-control" id="nameField" placeholder="Enter Author Name " th:field="*{name}">
