--- a/src/main/resources/templates/auth-base.html
+++ b/src/main/resources/templates/auth-base.html
@@ -19,10 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto ">
         <li class="nav-item">
-          <a class="nav-link" th:href ="@{/auth/login}">Login <span class="sr-only">(current)</span></a>
+          <a class="nav-link"  th:href ="@{/auth/login}"  th:classappend="${servletPath == '/auth/login'? 'active':''}">Login <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  th:href="@{/auth/register}">Register</a>
+          <a class="nav-link"  th:href="@{/auth/register}" th:classappend="${servletPath == '/auth/register'? 'active':''}">Register</a>
         </li>
 
       </ul>
